# cmake-lib

./: .gitignore  CMakeLists.txt  LibConfig.cmake  ci.nix  default.nix  derivation.nix  shell.nix
.github/workflows/: cmake-lib.yml
comp/: default.cmake  esbuild.cmake  generate.cmake  git.cmake  lang.cmake  nix.cmake  node.cmake  ts.cmake  util.cmake
examples/simple/: CMakeLists.txt
examples/typescript/: CMakeLists.txt  build.sh  tsconfig.json
examples/typescript/lib/: CMakeLists.txt  index.ts  package.json  tsconfig.json
examples/typescript/src/: CMakeLists.txt  index.ts  package.json  tsconfig.json
lang/ts/: CMakeDetermineTypeScriptCompiler.cmake  CMakeTestTypeScriptCompiler.cmake  CMakeTypeScriptCompiler.cmake.in  CMakeTypeScriptInformation.cmake
scripts/: link_node_module.sh  parse_jsmap.sh
src/: esbuild.cmake  gen.cmake  git.cmake  nix.cmake  node.cmake  ts.cmake  util.cmake
